--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -32,12 +32,15 @@
 <body class="home">
 <header id="header">		
 	<div id="head" class="parallax" parallax-speed="2">
-		<h1 id="logo" class="text-center">
+		<p id="logoWrapper">
+			<span><object type="image/svg+xml" data="{{ .Site.BaseURL }}images/logo.svg" id="logo"></object></span>
+		</p>
+		<h1 class="text-center">
 			<a href="/{{ .Language.Lang }}"><img class="img-circle" src="{{ .Site.BaseURL }}images/guy.jpg" alt=""></a>
 			<span class="title">{{ .Site.Params.name }}</span><br/>
 			<span class="tagline">{{ .Site.Params.description }}</span>	<br/>		
 			<a class="tagline" href="">{{ .Site.Params.email }}</a>
-		</h1>
+		</h1>		
 		<div id="langSwitcher">
 				{{ range $.AllTranslations }}
 					<a class="dropdown-item" href="{{ .Permalink }}">{{ .Language.LanguageName }}</a>
