--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -858,21 +858,30 @@ footer.entry-meta .meta-in {
   background-image: url(../images/bg_head_grey.jpg);
 }  
 
-#logo img {
+#head h1 img {
     transition: filter .5s ease-in-out;
     -webkit-filter: grayscale(100%); /* Ch 23+, Saf 6.0+, BB 10.0+ */
     filter: grayscale(100%); /* FF 35+ */
 }
   
-#head:hover #logo img {
+#head:hover h1 img {
   transition: filter .5s ease-in-out;
     -webkit-filter: grayscale(0%); /* Ch 23+, Saf 6.0+, BB 10.0+ */
     filter: grayscale(0%); /* FF 35+ */
   }
 
-/*#head h1 {
-  text-shadow: 1px 1px 2px #FFF27A, 0 0 25px #FFF27A, 0 0 5px #FFF27A;
-} */
+#logoWrapper {
+  text-align: center;  
+}
+
+#logoWrapper span {
+  width: 120px;  
+  padding: 10px 10px 0px;
+  background-color: #FFF27A;
+  opacity: 0.7; 
+  display: inline-block; 
+}
+
 #head .title,
 #head .tagline {  
   margin-top: 10px;
@@ -884,6 +893,14 @@ footer.entry-meta .meta-in {
 
 #footer {
   background: #003e74;
+}
+
+#footerLogoWrapper {
+  text-align: center;
+}
+
+#footerLogo{
+  height: 25px;
 }
 
 #mc_embed_signup {
