--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -79,7 +79,7 @@
 				</div>
 			</div>
 			<div class="col-md-4 widget">
-				<div class="widget-body">
+				<div id="footerLogoWrapper" class="widget-body">
 					<object type="image/svg+xml" data="{{ .Site.BaseURL }}images/footer-logo.svg" id="footerLogo"></object>
 				</div>
 			</div>
