--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,7 +6,19 @@
 	
 	<title>{{ .Site.Params.Title }}</title>
 
-	<link rel="shortcut icon" href="{{ .Site.BaseURL }}{{ .Site.Params.favicon }}">
+
+	<!-- favicon-->
+	<link type="image/x-icon" rel="shortcut icon" href="{{ .Site.BaseURL }}images/favicon/favicon.ico">
+	<link type="image/png" sizes="16x16" rel="icon" href="{{ .Site.BaseURL }}images/favicon/favicon-16x16.png">
+	<link type="image/png" sizes="32x32" rel="icon" href="{{ .Site.BaseURL }}images/favicon/favicon-32x32.png">
+	<link type="image/png" sizes="512x512" rel="icon" href="{{ .Site.BaseURL }}images/favicon/android-chrome-512x512.png">
+	<link type="image/png" sizes="192x192" rel="icon" href="{{ .Site.BaseURL }}images/favicon/android-chrome-192x192.png">
+
+	<link rel="apple-touch-icon" href="{{ .Site.BaseURL }}images/favicon/apple-touch-icon.png">
+	
+	<link rel="manifest" href="{{ .Site.BaseURL }}images/favicon/site.webmanifest">
+	<meta name="theme-color" content="#003e74">
+	<!-- favicon-->
 
 	<!-- Bootstrap -->
 	<link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet">
