--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{ .Language.Lang }}">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport"    content="width=device-width, initial-scale=1.0">
 	
 	<title>{{ .Site.Params.Title }}</title>
-
 
 	<!-- favicon-->
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
