articles for and from LinkedIn

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -89,7 +89,7 @@
 			<div class="col-md-4 widget">
 				<div class="widget-body">
 					<p class="text-right">
-						Copyright &copy; {{ .Site.Params.years }}, {{ .Site.Params.name }}<br>						
+						Copyright &copy; {{ .Site.Params.years }}, {{ .Site.Params.name }}. {{ .Site.Params.copyright }}<br>						
                     </p>
 				</div>
 			</div>
