--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -41,13 +41,11 @@
 <header id="header">		
 	<div id="head" class="parallax" parallax-speed="2">
 		<p id="logoWrapper">
-			<span><object type="image/svg+xml" data="{{ .Site.BaseURL }}images/logo.svg" id="logo"></object></span>
+			<a id="logoLink" href="/{{ .Language.Lang }}"><object type="image/svg+xml" data="{{ .Site.BaseURL }}images/logo.svg" id="logo"></object></a>
 		</p>
-		<h1 class="text-center">
-			<a href="/{{ .Language.Lang }}"><img class="img-circle" src="{{ .Site.BaseURL }}images/guy.jpg" alt=""></a>
+		<h1 id="mainHeadline" class="text-left">
 			<span class="title">{{ .Site.Params.name }}</span><br/>
-			<span class="tagline">{{ .Site.Params.description }}</span>	<br/>		
-			<a class="tagline" href="">{{ .Site.Params.email }}</a>
+			<span class="tagline emphasized">{{ .Site.Params.description }}</span>	<br/>		
 		</h1>		
 		<div id="langSwitcher">
 				{{ range $.AllTranslations }}
